src/modules/base/inputChoiceSet/inputChoiceSet.css
/**
 * BSD 3-Clause License
 *
 * Copyright (c) 2021, Avonni Labs, Inc.
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 * - Redistributions of source code must retain the above copyright notice, this
 *   list of conditions and the following disclaimer.
 *
 * - Redistributions in binary form must reproduce the above copyright notice,
 *   this list of conditions and the following disclaimer in the documentation
 *   and/or other materials provided with the distribution.
 *
 * - Neither the name of the copyright holder nor the names of its
 *   contributors may be used to endorse or promote products derived from
 *   this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
 * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
 * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
 * CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

:host {
    display: block;
}

.slds-checkbox.horizontal {
    display: inline-flex;
}

.slds-radio.horizontal {
    display: inline-flex;
}

.slds-checkbox_button-group.vertical {
    flex-direction: column;
}

.slds-checkbox_button__label.vertical {
    width: 100%;
    border-radius: 0;
}

.slds-checkbox_button__label.horizontal {
    height: 100%;
}

.slds-checkbox_faux {
    padding: 0;
}

.slds-checkbox_button {
    border-left: none;
    border-bottom: 1px solid #dddbda;
}

.slds-checkbox_button.horizontal {
    border-right: 1px solid #dddbda;
    border-bottom: none;
}

.avonni-input-choice-set__display_flex {
    display: flex;
}

.avonni-input-choice-set__label {
    color: var(--avonni-input-choice-set-header-text-color, #3e3e3c);
    font-size: var(--avonni-input-choice-set-header-font-size, 0.75rem);
    font-style: var(--avonni-input-choice-set-header-font-style, normal);
    font-weight: var(--avonni-input-choice-set-header-font-weight, 400);
}

@media (max-width: 480px) {
    .avonni-input-choice-set-stretch {
        width: 100%;
    }
}

